--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.1.3"
   }
 }
