--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.4",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "autoprefixer": "^10.2.4",
